# GLRenderPipeLine

./: CMakeLists.txt  ShadingAndTextureMapping.cpp  main.cpp  main的副本.cpp
Resources/Shaders/: 2.stencil_testing.vs  5.2.framebuffers.fs  geometry_normal_visualization.gs  shaded_cube.fs  shaded_cube.vs
Resources/Shaders/DepthView/: depth_view.fs
Resources/Shaders/PostProcess/: effect_blur.fs  effect_edge_detection.fs  effect_inversion.vs
Resources/Shaders/Shadow/: shadow_mapping.fs  shadow_screen.vs
header/: MeshManager.h  Scene.h  SceneManager.h  TSingleton.h  shader.h
header/Rendering/: ForwardRenderSystem.h  IRenderSystem.h
header/camera/: camera.h
header/entity/: entitybase.h  light.h  transform.h
header/entity/model/: model.h
header/entity/primitive/: cube.h  plane.h  quad.h  screenrenderquad.h  skybox.h
header/glad/: glad.h
header/glm/: CMakeLists.txt
header/material/: material.h
header/mesh/: cubemesh.h  mesh.h  planemesh.h  quadmesh.h
header/postprocess/: postprocessmgr.h
header/texture/: texture.h
src/: glad.c  stb_image.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
